--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "serverless",
     "jamstack",
     "gatsby",
-    "netlify"
+    "netlify",
+    "react",
+    "redux",
+    "visualization",
+    "data"
   ],
   "scripts": {
     "clean": "rm -rf public .cache",
@@ -39,7 +43,6 @@
     "react-spring": "^6.1.8",
     "rebass": "^2.3.4",
     "redux": "^4.0.1",
-    "shortid": "^2.2.14",
     "styled-components": "^4.0.3"
   },
   "devDependencies": {
