--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-resolve-src": "^2.0.0-beta.1",
     "gatsby-plugin-sharp": "^2.0.7",
+    "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-responsive-iframe": "^2.0.6",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-remark": "^2.1.12",
     "gatsby-transformer-sharp": "^2.1.4",
