--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-sharp": "^2.0.7",
     "gatsby-remark-emojis": "^0.2.3",
     "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-relative-images": "^0.2.0",
     "gatsby-remark-responsive-iframe": "^2.0.6",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-remark": "^2.1.12",
