--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "netlify",
     "react",
     "redux",
+    "markdown",
     "visualization",
     "data"
   ],
@@ -26,20 +27,13 @@
     "dev": "gatsby develop"
   },
   "dependencies": {
+    "emoji-dictionary": "^1.0.9",
     "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-resolve-src": "^2.0.0-beta.1",
-    "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-remark-emojis": "^0.2.3",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-relative-images": "^0.2.0",
-    "gatsby-remark-responsive-iframe": "^2.0.6",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-remark": "^2.1.12",
-    "gatsby-transformer-sharp": "^2.1.4",
     "keymirror": "^0.1.1",
     "react": "^16.7.0-alpha",
     "react-dom": "^16.7.0-alpha",
